# create-chatgpt-app

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/: FUNDING.yml
src/: main.rs
