[package]
name = "create_chatgpt_app"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to create a new Rocket webapp with ChatGPT integration."
authors = ["Ben Greenberg <bengreenberg@gmail.com>"]
keywords = ["chatgpt", "rocket", "webapp", "cli"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1.0"
serde_json = "1.0"
structopt = "0.3"
fs_extra = "1.2"
tempfile = "3.2"
